--- a/style.css
+++ b/style.css
@@ -2,22 +2,39 @@
   display: grid;    
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: 50px 350px 50px;
+  padding: 1em;
 }
 
 header {
   grid-column: span 12;
   display: flex;
+  background-color: gold;
+  padding: 1em;
 }
 
 /* moving logout button to right */
 header > div:nth-child(3) {
     margin-left: auto;
 }
+header > div:nth-child(2) {
+    margin-left: 1em;
+}
+
 
 aside {
   grid-column: span 2;
+  background-color: teal;
+  padding: 1em;
 }
 
 main {
   grid-column: span 10;
+  background-color: lightcoral;
+  padding: 1em;
+}
+
+footer {
+  grid-column: span 12;
+  background-color: gold;
+  padding: 1em;
 }
